# evoharness

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
case_studies/: README.md
case_studies/uni_v4_hook/: README.md  auction_design.json  fee_policy.json  production_policy.json
case_studies/uni_v4_hook/support/: OracleAnchoredLVRHookEvaluator.t.sol  OracleAnchoredLVRHookProductionEvaluator.t.sol  evaluate_auction_design.py
docs/: authoring_adapters.md
examples/command_repo_demo/: README.md  adapter.json
examples/command_repo_demo/repo/: README.md  candidate.py  evaluate.py  test_candidate.py
examples/foundry_hook/: README.md  auction_design.json  fee_policy.json  production_policy.json
harness/: __main__.py  claude.py  cli.py  db.py  evolve.py  models.py  run.py  selection.py  snapshots.py  utils.py  workspaces.py
harness/adapters/: __init__.py  base.py  command_repo.py  foundry_hook.py
harness/prompts/: program.md  system.md
scripts/: prune_harness_runs.py
tests/: test_command_repo_adapter.py  test_foundry_hook_adapter.py
