[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evo-harness"
version = "0.1.0"
description = "Adapter-driven evolutionary harness for code optimization"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Mitch" },
]
dependencies = []

[project.scripts]
evo-harness = "harness.cli:main"

[tool.setuptools.packages.find]
include = ["harness*"]

[tool.setuptools.package-data]
harness = ["prompts/*.md"]
